--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                     <i class="fab fa-github"></i>
                                 </h3>
                             </a> 
-                            <p>A full stack application for runsheet management and shift scheduling for bank operations.  More time can be put to design the web app but the functionality is working properly.</p>
+                            <p>A full stack application for runsheet management and shift scheduling for bank operations.</p>
                             <p><b>Technologies used:</b> Django, HTML, CSS</p>
                         </div>
                     </div>
