Added store web app

--- a/index.html
+++ b/index.html
@@ -135,6 +135,24 @@
                         </div>
                     </div>
 
+                    <div class="website-examples">
+                        <h2 class="website-url">
+                            <a target="_blank" href="https://store.webcore.co.ke">Store Web app</a>
+                        </h2>
+                        <div class="screen-previews">
+                            <img src="images/site-previews/store/store-desk.png" alt="runsheet-landing">
+                        </div>
+                        <div class="website-description">
+                            <a target="_blank" href="https://store.webcore.co.ke">
+                                <h3 class="source-code">Source Code
+                                    <i class="fab fa-github"></i>
+                                </h3>
+                            </a> 
+                            <p>An e-commerce web application that is on going.</p>
+                            <p><b>Technologies used:</b> Django, HTML, CSS, JavaScript</p>
+                        </div>
+                    </div>
+
                 </div>
                 <nav>
                     <button class="nav prev"><i class="fas fa-chevron-left fa-2x"></i></button>
