Added Dynamic points and travels

--- a/index.html
+++ b/index.html
@@ -118,6 +118,21 @@
 
                     <div class="website-examples">
                         <h2 class="website-url">
+                            <a target="_blank" href="https://dynamicpointsandtravels.com/">Dynamic points and travels</a>
+                        </h2>
+                        <div class="screen-previews">
+                            <img src="images/site-previews/dynamic/dynamic-desk-min.png" alt="dynamic-landing">
+                            <img class="mobile-preview" src="images/site-previews/dynamic/dynamic-phone-min.png" alt="dynamic-landingmobile">
+                        </div>
+                        <div class="website-description">
+                            <img class="wordpress" src="images/logos/wordpress.png" alt="wordpress">  
+                            <p>Client Website.</p>
+                            <p><b>Technologies used:</b> Wordpress (PHP)</p>
+                        </div>
+                    </div>
+
+                    <div class="website-examples">
+                        <h2 class="website-url">
                             <a target="_blank" href="https://github.com/smgacema/Runsheet-Management">Runsheet Web app</a>
                         </h2>
                         <div class="screen-previews">
@@ -148,8 +163,8 @@
                                     <i class="fab fa-github"></i>
                                 </h3>
                             </a> 
-                            <p>An e-commerce web application that is on going.</p>
-                            <p><b>Technologies used:</b> Django, HTML, CSS, JavaScript</p>
+                            <p>An e-commerce web application.</p>
+                            <p><b>Technologies used:</b> Django, Tailwind CSS, JQuery</p>
                         </div>
                     </div>
 
