--- a/index.html
+++ b/index.html
@@ -259,12 +259,8 @@
                         <img src="images/vector-art/bible.png" alt="bible-icon">
                     </div>
                     <div class="hobbies--hobby">
-                        <p>I Play football, pool table and table tennis. I also enjoy watching football matches.</p>
+                        <p>I Play football, pool table and table tennis.</p>
                         <img src="images/vector-art/football.png" alt="football-icon">
-                    </div>
-                    <div class="hobbies--hobby">
-                        <p>I like playing video games to relax and have fun.</p>
-                        <img src="images/vector-art/gameboy.png" alt="gameboy-icon">
                     </div>
                 </div>
             </div>
