--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         </div>
                         <div class="website-description">
                             <img class="wordpress" src="images/logos/wordpress.png" alt="wordpress">  
-                            <p>A website for the company I'm starting to give me a bit of online exposure and to showcase my work.</p>
+                            <p>A website for my company to provide online exposure on my services and work.</p>
                             <p><b>Technologies used:</b> Wordpress (PHP)</p>
                         </div>
                     </div>
@@ -195,6 +195,13 @@
                     I am competent in the latest, best, and enterprise level practices used in this frontend framework. It is the most used Python web framework that encourages rapid development and clean, pragmatic design. Built by experienced developers, it takes care of much of the hassle of web development, so you can focus on writing your app without needing to reinvent the wheel.</span>
                 </li>
                 <li>
+                    <img src="images/logos/Vue.png" alt="Vue Logo">
+                    <i class="fas fa-angle-double-down fa-2x"></i>
+                    <i class="fas fa-angle-double-up fa-2x opacity"></i>
+                    <span><strong>Vue Js - </strong>
+                    Vue is my main frontend JavaScript framework. It's simpler with a lot complex configuration done for you thus making developing code faster, and I like it's code design. It has many supporting libraries and a huge community behind it.</span>
+                </li>
+                <li>
                     <img src="images/logos/wordpress-logo-c.png" alt="Wordpress Logo">
                     <i class="fas fa-angle-double-down fa-2x"></i>
                     <i class="fas fa-angle-double-up fa-2x opacity"></i>
@@ -247,7 +254,7 @@
             <div class="web-dev-info">
                 <h2 class="bio-category">Web Development and Me</h2>
                 <img class="programmer-icon" src="images/vector-art/programmer.png" alt="programmer-icon">
-                <p>I've made an ecommerce website with php, a runsheet web app with django and many other small projects.</p>
+                <p>I've made an ecommerce website and a Run Sheet management web app with django and many other small projects.</p>
                 <p>My learning continues every day.  I'm always looking for new tricks and tips, and building constantly, even if they are only personal projects for my own development.  Aside from that, I have had a handful of real-world clients that I was able to help build websites for, and it has been extremely rewarding.</p>
             </div>
 
@@ -255,11 +262,7 @@
                 <h2 class="bio-category">Hobbies and Interests</h2>
                 <div class="hobbies--flex">
                     <div class="hobbies--hobby expand-box">
-                        <p class="reveal-text">I am a missionary, I go around local areas to share the gospel.</p>
-                        <img src="images/vector-art/bible.png" alt="bible-icon">
-                    </div>
-                    <div class="hobbies--hobby">
-                        <p>I Play football, pool table and table tennis.</p>
+                        <p>I Play football and the pool table.</p>
                         <img src="images/vector-art/football.png" alt="football-icon">
                     </div>
                 </div>
