Added hosting on AWS

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
                     <div class="website-examples">
                         <h2 class="website-url">
-                            <a target="_blank" href="https://store.webcore.co.ke">Store Web app</a>
+                            <a target="_blank" href="http://13.244.117.52:8000">Store Web app</a>
                         </h2>
                         <div class="screen-previews">
                             <img src="images/site-previews/store/store-desk.png" alt="runsheet-landing">
@@ -163,7 +163,7 @@
                                     <i class="fab fa-github"></i>
                                 </h3>
                             </a> 
-                            <p>An e-commerce web application.</p>
+                            <p>An e-commerce web application hosted on AWS.</p>
                             <p><b>Technologies used:</b> Django, Tailwind CSS, JQuery</p>
                         </div>
                     </div>
