--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
                             <img src="images/site-previews/store/store-desk.png" alt="runsheet-landing">
                         </div>
                         <div class="website-description">
-                            <a target="_blank" href="https://store.webcore.co.ke">
+                            <a target="_blank" href="#?">
                                 <h3 class="source-code">Source Code
                                     <i class="fab fa-github"></i>
                                 </h3>
                             </a> 
-                            <p>An e-commerce web application hosted on AWS.</p>
-                            <p><b>Technologies used:</b> Django, Tailwind CSS, JQuery</p>
+                            <p>An e-commerce web application that gets its' products from the Aliexpress API.</p>
+                            <p><b>Technologies used:</b> Django, JQuery, Tailwind CSS, AWS</p>
                         </div>
                     </div>
 
@@ -258,15 +258,19 @@
                 <p>My learning continues every day.  I'm always looking for new tricks and tips, and building constantly, even if they are only personal projects for my own development.  Aside from that, I have had a handful of real-world clients that I was able to help build websites for, and it has been extremely rewarding.</p>
             </div>
 
-            <div class="hobbies-interests">
+            <!-- <div class="hobbies-interests">
                 <h2 class="bio-category">Hobbies and Interests</h2>
                 <div class="hobbies--flex">
                     <div class="hobbies--hobby expand-box">
                         <p>I Play football and the pool table.</p>
                         <img src="images/vector-art/football.png" alt="football-icon">
                     </div>
+                    <div class="hobbies--hobby">
+                        <p>I Play football and the pool table.</p>
+                        <img src="images/vector-art/football.png" alt="football-icon">
+                    </div>
                 </div>
-            </div>
+            </div> -->
         </section>
     </main>
     
