Modified AWS and new tab icons

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                     <div class="website-examples">
                         <h2 class="website-url"> 
-                            <a target="_blank" href="https://anstenproperties.co.ke">anstenproperties.co.ke</a>
+                            <a target="_blank" href="https://anstenproperties.co.ke">anstenproperties.co.ke <i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </h2>
                         <div class="screen-previews">
                             <img src="images/site-previews/ansten/ansten-mockup-min.png" alt="ansten-landing">
@@ -73,7 +73,7 @@
 
                     <div class="website-examples">
                         <h2 class="website-url"> 
-                            <a target="_blank" href="https://applewoodata.com">applewoodata.com</a>
+                            <a target="_blank" href="https://applewoodata.com">applewoodata.com <i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </h2>
                         <div class="screen-previews">
                             <img src="images/site-previews/applewood/applewood-desk-mockup-min.png" alt="applewood-landing">
@@ -88,7 +88,7 @@
 
                     <div class="website-examples">
                         <h2 class="website-url">
-                            <a target="_blank" href="https://accessdemand.org">accessdemand.org</a>
+                            <a target="_blank" href="https://accessdemand.org">accessdemand.org <i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </h2>
                         <div class="screen-previews">
                             <img src="images/site-previews/accessdemand/accessdemand-desktop-mockup-min.png" alt="accessdemand-landing">
@@ -103,7 +103,7 @@
 
                     <div class="website-examples">
                         <h2 class="website-url">
-                            <a target="_blank" href="https://webcore.co.ke">webcore.co.ke</a>
+                            <a target="_blank" href="https://webcore.co.ke">webcore.co.ke <i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </h2>
                         <div class="screen-previews">
                             <img src="images/site-previews/webcore/webcore-desktop-mockup-min.png" alt="webcore-landing">
@@ -118,7 +118,7 @@
 
                     <div class="website-examples">
                         <h2 class="website-url">
-                            <a target="_blank" href="https://dynamicpointsandtravels.com/">Dynamic points and travels</a>
+                            <a target="_blank" href="https://dynamicpointsandtravels.com/">Dynamic points and travels <i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </h2>
                         <div class="screen-previews">
                             <img src="images/site-previews/dynamic/dynamic-desk-min.png" alt="dynamic-landing">
@@ -133,7 +133,7 @@
 
                     <div class="website-examples">
                         <h2 class="website-url">
-                            <a target="_blank" href="https://github.com/smgacema/Runsheet-Management">Runsheet Web app</a>
+                            <a target="_blank" href="https://github.com/smgacema/Runsheet-Management">Runsheet Web app <i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </h2>
                         <div class="screen-previews">
                             <img src="images/site-previews/runsheet/desktop-runsheet-min.png" alt="runsheet-landing">
@@ -152,18 +152,18 @@
 
                     <div class="website-examples">
                         <h2 class="website-url">
-                            <a target="_blank" href="http://13.244.117.52:8000">Store Web app</a>
+                            <a target="_blank" href="http://13.244.117.52">Store Web app <i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </h2>
                         <div class="screen-previews">
-                            <img src="images/site-previews/store/store-desk.png" alt="runsheet-landing">
+                            <img src="images/site-previews/store/store-desk.png" alt="store-landing">
                         </div>
                         <div class="website-description">
-                            <a target="_blank" href="#?">
+                            <a href="#?">
                                 <h3 class="source-code">Source Code
                                     <i class="fab fa-github"></i>
                                 </h3>
                             </a> 
-                            <p>An e-commerce web application that gets its' products from the Aliexpress API.</p>
+                            <p>An e-commerce web application that gets its' products from the Aliexpress API and hosted in AWS EC2.</p>
                             <p><b>Technologies used:</b> Django, JQuery, Tailwind CSS, AWS</p>
                         </div>
                     </div>
@@ -233,6 +233,7 @@
             <div class="skills--lesser">
                 <h3>My other valuable skills include...</h3>
                     <ul>
+                        <li>AWS</li>
                         <li>Graphic Design</li>
                         <li>Photoshop</li>
                         <li>Bootstrap</li>
@@ -258,7 +259,7 @@
                 <p>My learning continues every day.  I'm always looking for new tricks and tips, and building constantly, even if they are only personal projects for my own development.  Aside from that, I have had a handful of real-world clients that I was able to help build websites for, and it has been extremely rewarding.</p>
             </div>
 
-            <!-- <div class="hobbies-interests">
+            <!-- <div class="hobbies-interests ">
                 <h2 class="bio-category">Hobbies and Interests</h2>
                 <div class="hobbies--flex">
                     <div class="hobbies--hobby expand-box">
