E-commerce app redesign

--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                                     <i class="fab fa-github"></i>
                                 </h3>
                             </a> 
-                            <p>An e-commerce web application that gets its' products from the Aliexpress API and hosted in AWS EC2.</p>
-                            <p><b>Technologies used:</b> Django, JQuery, Tailwind CSS, AWS</p>
+                            <p>An e-commerce web application that gets its' products from the Aliexpress API, makes payment through Paypal & MPesa, and is hosted in AWS EC2.</p>
+                            <p><b>Technologies used:</b> Django, JQuery, Bootstrap, AWS</p>
                         </div>
                     </div>
 
