Removed Wordpress sites

--- a/index.html
+++ b/index.html
@@ -55,22 +55,7 @@
            <hr>
            <div class="carousel" data-bfc>
                <div class="item-container">
-
-                    <div class="website-examples">
-                        <h2 class="website-url"> 
-                            <a target="_blank" href="https://anstenproperties.co.ke">anstenproperties.co.ke <i class="fa fa-external-link" aria-hidden="true"></i></a>
-                        </h2>
-                        <div class="screen-previews">
-                            <img src="images/site-previews/ansten/ansten-mockup-min.png" alt="ansten-landing">
-                            <img class="mobile-preview" src="images/site-previews/ansten" alt="ansten-mobile">
-                        </div>
-                        <div class="website-description">
-                            <img class="wordpress" src="images/logos/wordpress.png" alt="wordpress">
-                            <p>A Property management website for a company to help them enter the online market. The website portrayed the company's houses and commercial properties they manage, advertising them to would be customers on how the property looks, it's location and price.</p>
-                            <p><b>Technologies used:</b> Wordpress (PHP)</p>
-                        </div>
-                    </div>
-
+<!--
                     <div class="website-examples">
                         <h2 class="website-url"> 
                             <a target="_blank" href="https://applewoodata.com">applewoodata.com <i class="fa fa-external-link" aria-hidden="true"></i></a>
@@ -85,22 +70,8 @@
                             <p><b>Technologies used:</b> Wordpress (PHP)</p>
                         </div>
                     </div>
-
-                    <div class="website-examples">
-                        <h2 class="website-url">
-                            <a target="_blank" href="https://accessdemand.org">accessdemand.org <i class="fa fa-external-link" aria-hidden="true"></i></a>
-                        </h2>
-                        <div class="screen-previews">
-                            <img src="images/site-previews/accessdemand/accessdemand-desktop-mockup-min.png" alt="accessdemand-landing">
-                            <img class="mobile-preview" src="images/site-previews/accessdemand/accessdemand-mobile-mockup-small-min.png" alt="accessdemand-mobile">
-                        </div>
-                        <div class="website-description">
-                            <img class="wordpress" src="images/logos/wordpress.png" alt="wordpress">
-                            <p>A site for a business consultancy firm who specialize in Demand Generations, County Government Engagement and Strategic Consultations.</p>
-                            <p><b>Technologies used:</b> Wordpress (PHP)</p>
-                        </div>
-                    </div>
-
+-->
+                   
                     <div class="website-examples">
                         <h2 class="website-url">
                             <a target="_blank" href="https://webcore.co.ke">webcore.co.ke <i class="fa fa-external-link" aria-hidden="true"></i></a>
@@ -111,26 +82,12 @@
                         </div>
                         <div class="website-description">
                             <img class="wordpress" src="images/logos/wordpress.png" alt="wordpress">  
-                            <p>A website for my company to provide online exposure on my services and work.</p>
+                            <p>A website for my company to provide online exposure on my services and work. You can find more websites I have designed using Wordpress by going to the projects page.</p>
                             <p><b>Technologies used:</b> Wordpress (PHP)</p>
                         </div>
                     </div>
 
-                    <div class="website-examples">
-                        <h2 class="website-url">
-                            <a target="_blank" href="https://dynamicpointsandtravels.com/">Dynamic points and travels <i class="fa fa-external-link" aria-hidden="true"></i></a>
-                        </h2>
-                        <div class="screen-previews">
-                            <img src="images/site-previews/dynamic/dynamic-desk-min.png" alt="dynamic-landing">
-                            <img class="mobile-preview" src="images/site-previews/dynamic/dynamic-phone-min.png" alt="dynamic-landingmobile">
-                        </div>
-                        <div class="website-description">
-                            <img class="wordpress" src="images/logos/wordpress.png" alt="wordpress">  
-                            <p>Client Website.</p>
-                            <p><b>Technologies used:</b> Wordpress (PHP)</p>
-                        </div>
-                    </div>
-
+                
                     <div class="website-examples">
                         <h2 class="website-url">
                             <a target="_blank" href="https://github.com/smgacema/Runsheet-Management">Runsheet Web app <i class="fa fa-external-link" aria-hidden="true"></i></a>
