added nuxt3 app

--- a/index.html
+++ b/index.html
@@ -55,22 +55,6 @@
            <hr>
            <div class="carousel" data-bfc>
                <div class="item-container">
-<!--
-                    <div class="website-examples">
-                        <h2 class="website-url"> 
-                            <a target="_blank" href="https://applewoodata.com">applewoodata.com <i class="fa fa-external-link" aria-hidden="true"></i></a>
-                        </h2>
-                        <div class="screen-previews">
-                            <img src="images/site-previews/applewood/applewood-desk-mockup-min.png" alt="applewood-landing">
-                            <img class="mobile-preview" src="images/site-previews/applewood/applewood-mobile-mockup-small-min.png" alt="applewood-mobilelanding">
-                        </div>
-                        <div class="website-description">
-                            <img class="wordpress" src="images/logos/wordpress.png" alt="wordpress">
-                            <p>An online presence website for a telecommunications technology company.</p>
-                            <p><b>Technologies used:</b> Wordpress (PHP)</p>
-                        </div>
-                    </div>
--->
                    
                     <div class="website-examples">
                         <h2 class="website-url">
@@ -109,6 +93,24 @@
 
                     <div class="website-examples">
                         <h2 class="website-url">
+                            <a target="_blank" href="https://github.com/smgacema/Nux3-shopy">Nuxt3 and Shopify Integration <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                        </h2>
+                        <div class="screen-previews">
+                            <img src="images/site-previews/nuxt3-shopify/nuxt3+shopify.jpg" alt="nuxt3-landing">
+                        </div>
+                        <div class="website-description">
+                            <a target="_blank" href="https://github.com/smgacema/Nux3-shopy">
+                                <h3 class="source-code">Source Code
+                                    <i class="fab fa-github"></i>
+                                </h3>
+                            </a> 
+                            <p>A nuxt3 headless e-commerce site integrated with Shopify for product management. Designed with tailwind CSS.</p>
+                            <p><b>Technologies used:</b> Nuxt3, Shopify, Tailwind css</p>
+                        </div>
+                    </div>
+
+                    <div class="website-examples">
+                        <h2 class="website-url">
                             <a target="_blank" href="http://13.244.117.52">Store Web app <i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </h2>
                         <div class="screen-previews">
@@ -120,7 +122,7 @@
                                     <i class="fab fa-github"></i>
                                 </h3>
                             </a> 
-                            <p>An e-commerce web application that gets its' products from the Aliexpress API, makes payment through Paypal & MPesa, and is hosted in AWS EC2.</p>
+                            <p>An e-commerce web application that gets its' products from the Aliexpress API, makes payment through Paypal & MPesa, and is hosted in AWS EC2. It is private in my github repository and I'm currently redesigning it.</p>
                             <p><b>Technologies used:</b> Django, JQuery, Bootstrap, AWS</p>
                         </div>
                     </div>
