--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
                         <li>Graphic Design</li>
                         <li>Photoshop</li>
                         <li>Bootstrap</li>
+                        <li>Tailwind</li>
                         <li>Domain registry</li>
                         <li>Web Hosting</li>
                     </ul>
