Changed AWS app link

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                     <div class="website-examples">
                         <h2 class="website-url">
-                            <a target="_blank" href="http://13.244.117.52">Store Web app <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                            <a target="_blank" href="http://13.246.29.143:8000">Store Web app <i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </h2>
                         <div class="screen-previews">
                             <img src="images/site-previews/store/store-desk.png" alt="store-landing">
@@ -122,7 +122,7 @@
                                     <i class="fab fa-github"></i>
                                 </h3>
                             </a> 
-                            <p>An e-commerce web application that gets its' products from the Aliexpress API, makes payment through Paypal & MPesa, and is hosted in AWS EC2. It is private in my github repository and I'm currently redesigning it.</p>
+                            <p>An e-commerce web application that gets its' products from the Aliexpress API, makes payment through Paypal & MPesa, and is hosted in AWS EC2. It is private in my github repository and still being improved.</p>
                             <p><b>Technologies used:</b> Django, JQuery, Bootstrap, AWS</p>
                         </div>
                     </div>
