--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
         <div class="backdrop"></div>
         <div class="modal">
-            <img src="images/portfolio/Resume.jpg" alt="resume">
+            <img src="images/portfolio/CV2.jpg" alt="resume">
         </div>
         <div class="quick-bio">
             <h2>Quick Bio</h2>
