--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="quick-bio">
             <h2>Quick Bio</h2>
-            <p>I'm passionate about programming web applications with django framework as my main tool. I've made a runsheet and scheduling web app for banks and I enjoy the coding with minimal syntax and the structure of the project that django provides. I'm also fascinated in developing engaging UIs and animations with css. I likewise design websites with wordpress in my business as wordpress is easier to make websites fast through templates and this makes it cheaper to the customer to have a footing in the online market.</p>
+            <p>I am passionate about programming web applications with the Django framework as my main tool. I made a run sheet management web app, and I like the simplicity of Django's code and the structure of the project. Furthermore, I also like to make engaging UIs and animations with CSS. In my online business, I design websites with WordPress, as it's easier to make websites fast through the widely available templates, which makes it cheaper for the customer to get a foothold in the online world.</p>
         </div>
         <section class="my-works">
            <h1>Take a look at my work</h1>
@@ -133,8 +133,20 @@
                     <button class="nav next"><i class="fas fa-chevron-right fa-2x"></i></button>
                 </nav>
             </div>
+            <div class="skills--lesser">
+                <h2>Clients WordPress Websites:</h2>
+                    <ul>
+                        <li><a href="https://applewoodata.com/">Applewood Data Technologies</a></li>
+                        <li><a href="https://aiotech-solutions.com/">Aiotech Solutions</a></li>
+                        <li><a href="https://afriagrimark.com/">Afriagrimark</a></li>
+                        <li><a href="https://kiberahamlets.org/">Kibera Hamlets Organization</a></li>
+                        <li><a href="https://adulthomelakewoodupendo.com/">Upendo Senior Home</a></li>
+                    </ul>
+            </div> 
             <hr>
         </section>
+        
+
 
         <section id="skills">
             <h2>Skills and Qualifications</h2>
